infra/k8s/bootstrap/argocd-webhook.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-webhook
  namespace: argocd
spec:
  parentRefs:
    - name: cluster-gateway
      namespace: envoy-gateway-system
      sectionName: argocd-webhook-http
  hostnames:
    - argocd-webhook.pbonard.com
  rules:
    - matches:
        - method: POST
          path:
            type: Exact
            value: /api/webhook
      backendRefs:
        - name: argocd-server
          port: 80
